--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,11 +45,12 @@ dependencies {
     annotationProcessor('androidx.room:room-compiler:2.5.0')
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.0-alpha02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.0-alpha02'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
+    androidTestImplementation 'androidx.test:rules:1.6.0-alpha02'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.6.0-alpha02'
+    implementation 'androidx.tracing:tracing:1.1.0'
 
 }
